Use fileutils and replace Path.of with Paths.get