@@ -28,6 +28,7 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
@@ -68,50 +69,50 @@ public class BackupServiceTest {
         String dirPathString;
 
         // ✅ Windows Test
-        dataDirPath = Path.of("C:\\Users\\bisq_user\\alice");
-        storeFilePath = Path.of(dataDirPath + "\\db\\private\\key_bundle_store.protobuf");
+        dataDirPath = Paths.get("C:\\Users\\bisq_user\\alice");
+        storeFilePath = Paths.get(dataDirPath + "\\db\\private\\key_bundle_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, true);
         assertEquals("\\db\\private\\key_bundle_store.protobuf", dirPathString);
 
         // ✅ macOS Test
-        dataDirPath = Path.of("/Users/bisq_user/Library/Application Support/alice");
-        storeFilePath = Path.of(dataDirPath + "/db/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/Users/bisq_user/Library/Application Support/alice");
+        storeFilePath = Paths.get(dataDirPath + "/db/private/key_bundle_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, false);
         assertEquals("/db/private/key_bundle_store.protobuf", dirPathString);
 
         // ✅ Unix Test
-        dataDirPath = Path.of("/home/bisq_user/alice");
-        storeFilePath = Path.of(dataDirPath + "/db/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/home/bisq_user/alice");
+        storeFilePath = Paths.get(dataDirPath + "/db/private/key_bundle_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, false);
         assertEquals("/db/private/key_bundle_store.protobuf", dirPathString);
 
         // ✅ Windows UNC Path Test (Server Shares)
-        dataDirPath = Path.of("\\\\Server\\Share\\bisq_user\\alice");
-        storeFilePath = Path.of("\\\\Server\\Share\\bisq_user\\alice\\db\\private\\key_bundle_store.protobuf");
+        dataDirPath = Paths.get("\\\\Server\\Share\\bisq_user\\alice");
+        storeFilePath = Paths.get("\\\\Server\\Share\\bisq_user\\alice\\db\\private\\key_bundle_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, true);
         assertEquals("\\db\\private\\key_bundle_store.protobuf", dirPathString);
 
         // ✅ Nested Directory Test
-        dataDirPath = Path.of("/home/bisq_user/alice");
-        storeFilePath = Path.of("/home/bisq_user/alice/db/subdir/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/home/bisq_user/alice");
+        storeFilePath = Paths.get("/home/bisq_user/alice/db/subdir/private/key_bundle_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, false);
         assertEquals("/db/subdir/private/key_bundle_store.protobuf", dirPathString);
 
         // ✅ Path with Trailing Slash in dataDirPath
-        dataDirPath = Path.of("/home/bisq_user/alice/");
-        storeFilePath = Path.of("/home/bisq_user/alice/db/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/home/bisq_user/alice/");
+        storeFilePath = Paths.get("/home/bisq_user/alice/db/private/key_bundle_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, false);
         assertEquals("/db/private/key_bundle_store.protobuf", dirPathString);
 
         // ✅ Special Characters in Path
-        dataDirPath = Path.of("C:\\Users\\bisq user\\data");
-        storeFilePath = Path.of("C:\\Users\\bisq user\\data\\db\\private\\my file_store.protobuf");
+        dataDirPath = Paths.get("C:\\Users\\bisq user\\data");
+        storeFilePath = Paths.get("C:\\Users\\bisq user\\data\\db\\private\\my file_store.protobuf");
         dirPathString = BackupService.getRelativePath(dataDirPath, storeFilePath, true);
         assertEquals("\\db\\private\\my file_store.protobuf", dirPathString);
 
         // ❌ File Outside `dataDirPath` (Should Throw Exception)
-        dataDirPath = Path.of("/home/bisq_user/alice");
-        storeFilePath = Path.of("/home/bisq_user/other_user/db/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/home/bisq_user/alice");
+        storeFilePath = Paths.get("/home/bisq_user/other_user/db/private/key_bundle_store.protobuf");
         Path finalDataDirPath = dataDirPath;
         Path finalStoreFilePath = storeFilePath;
         assertThrows(IllegalArgumentException.class, () -> {
@@ -124,22 +125,22 @@ public class BackupServiceTest {
         Path dataDirPath, storeFilePath, dirPath;
 
         // Windows
-        dataDirPath = Path.of("C:\\Users\\bisq_user\\alice");
-        storeFilePath = Path.of(dataDirPath + "\\db\\private\\key_bundle_store.protobuf");
+        dataDirPath = Paths.get("C:\\Users\\bisq_user\\alice");
+        storeFilePath = Paths.get(dataDirPath + "\\db\\private\\key_bundle_store.protobuf");
         dirPath = BackupService.resolveDirPath(dataDirPath, storeFilePath);
-        assertEquals(Path.of(dataDirPath + "\\backups\\private\\key_bundle"), dirPath);
+        assertEquals(Paths.get(dataDirPath + "\\backups\\private\\key_bundle"), dirPath);
 
         // OSX
-        dataDirPath = Path.of("/Users/bisq_user/Library/Application Support/alice");
-        storeFilePath = Path.of(dataDirPath + "/db/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/Users/bisq_user/Library/Application Support/alice");
+        storeFilePath = Paths.get(dataDirPath + "/db/private/key_bundle_store.protobuf");
         dirPath = BackupService.resolveDirPath(dataDirPath, storeFilePath);
-        assertEquals(Path.of(dataDirPath + "/backups/private/key_bundle"), dirPath);
+        assertEquals(Paths.get(dataDirPath + "/backups/private/key_bundle"), dirPath);
 
         // Unix
-        dataDirPath = Path.of("/home/bisq_user/alice");
-        storeFilePath = Path.of(dataDirPath + "/db/private/key_bundle_store.protobuf");
+        dataDirPath = Paths.get("/home/bisq_user/alice");
+        storeFilePath = Paths.get(dataDirPath + "/db/private/key_bundle_store.protobuf");
         dirPath = BackupService.resolveDirPath(dataDirPath, storeFilePath);
-        assertEquals(Path.of(dataDirPath + "/backups/private/key_bundle"), dirPath);
+        assertEquals(Paths.get(dataDirPath + "/backups/private/key_bundle"), dirPath);
     }
 
     @Test
@@ -476,6 +477,54 @@ public class BackupServiceTest {
         assertTrue(outdatedBackupFileInfos.contains(createBackupFileInfo(fileName, fileNames.get(16))));
         assertTrue(outdatedBackupFileInfos.contains(createBackupFileInfo(fileName, fileNames.get(23))));
         assertTrue(outdatedBackupFileInfos.contains(createBackupFileInfo(fileName, fileNames.get(27))));
+    }
+
+    @Test
+    void testGetBackupsReadsDirectoryAndReturnsParsedBackups(@TempDir Path tempDir) throws IOException {
+        Path dbDirPath = tempDir.resolve("db");
+        Path storePath = dbDirPath.resolve("test_store.protobuf");
+
+        List<String> fileNames = List.of(
+                "test_store.protobuf_2025-12-04_0901",
+                "test_store.protobuf_2024-01-01_0000",
+                "other.txt",
+                ".DS_Store"
+        );
+
+        Path backupPathDir = tempDir.resolve("backups").resolve("test");
+        FileMutatorUtils.createDirectories(backupPathDir);
+
+        // create files on disk
+        for (String fn : fileNames) {
+            FileMutatorUtils.writeToPath("dummy text", backupPathDir.resolve(fn));
+        }
+
+        BackupService bs = new BackupService(tempDir, storePath, MaxBackupSize.HUNDRED_MB);
+        List<BackupFileInfo> backups = bs.getBackups();
+
+        // Only the two valid backup files should be returned, newest first
+        assertEquals(2, backups.size());
+        assertEquals("test_store.protobuf_2025-12-04_0901", backups.get(0).getPath().getFileName().toString());
+        assertEquals("test_store.protobuf_2024-01-01_0000", backups.get(1).getPath().getFileName().toString());
+    }
+
+    @Test
+    void testCreateBackupFileInfoParsesAndSorts(@TempDir Path tempDir) {
+        String baseName = "test_store.protobuf";
+        List<Path> paths = List.of(
+                tempDir.resolve("test_store.protobuf_2025-12-04_0901"),
+                tempDir.resolve("test_store.protobuf_2024-01-01_0000"),
+                tempDir.resolve("not_a_backup.txt"),
+                tempDir.resolve(".DS_Store")
+        );
+
+        List<BackupFileInfo> infos = BackupService.createBackupFileInfo(baseName, paths);
+
+        // Only two valid backups expected and newest first
+        assertEquals(2, infos.size());
+        assertEquals("test_store.protobuf_2025-12-04_0901", infos.get(0).getPath().getFileName().toString());
+        assertEquals("test_store.protobuf_2024-01-01_0000", infos.get(1).getPath().getFileName().toString());
+>>>>>>> f7a1fd8d8 (Use fileutils and replace Path.of with Paths.get)
     }
 
     void createBackups() throws IOException {
